# readloop

./: .env.example  .gitignore  =3.0  CLAUDE.md  README.md  pyproject.toml  requirements.txt  run.py
docs/: ARCHITECTURE.md  ARCHITECTURE_MODIFICATION_REPORT.md  PROJECT_PLAN.md
readloop/: __main__.py  _run.py  cli.py  client.py  exceptions.py  init.py  pipeline.py  prompts.py  reader.py  retry.py  utils.py  validate.py
readloop/commands/: __init__.py  analysis.py  export.py  features.py  graph.py  memory.py  papers.py
readloop/features/: evolution.py  review.py
readloop/knowledge/: analyze.py  cluster.py  extractor.py  graph.py  html_viz.py  models.py  nx_bridge.py
readloop/memory/: models.py  prompts.py  recall.py  search.py  store.py
src/: cli.py  client.py  config.py  pipeline.py  prompts.py  reader.py
src/features/: proposals.py
src/knowledge/: canonicalize.py  cluster.py  extractor.py  graph.py  graphml_export.py  html_viz.py  prompts.py  visualize.py  wiki_export.py
src/memory/: embeddings.py  recall.py  search.py  store.py
tests/: smoke.py
